# 2112

./: .gitignore  LICENSE  Makefile  Makefile.db  Makefile.dev  Makefile.service  README.md  go.mod  go.sum  main.go  package-lock.json
.github/: CODE_OF_CONDUCT.md
.github/workflows/: codacy.yml  codeql.yml  go.yml
assets/keycloak/: master.json
backend/: go.mod  go.sum
ci/compose/: 2112-local-dev.yaml  2112-migrator.yaml  2112-python.yaml  2112-server.yaml  2112-web.yaml  2112.yaml  postgres.yaml  quick-start-postgres.yaml  quick-start.yaml
ci/docker/: .dockerignore  Dockerfile  Dockerfile.python  Dockerfile.web
cmd/: db.go  info.go  root.go  start.go  task.go
cmd/db/: create.go  drop.go  migrate.go  rollback.go  seed.go
cmd/info/: env.go  features.go  hiddenApiRoutes.go  protectedApiRoutes.go  publicApiRoutes.go
cmd/start/: hiddenApi.go  protectedApi.go  publicApi.go  watcher.go
cmd/task/: exec.go  list.go
deployments/compose/: docker-compose-grafana.yml  docker-compose-middleware.yml  docker-compose-web.yml  docker-compose.yaml  local-dev.yaml  postgres.yaml  timescale.yaml  web.yaml
deployments/config/: app-service.dev-env  (+4 more)
docs/: architecture.md
gateway-service/: go.mod  go.sum
graphql-api/: Makefile  go.mod  server.go
lib/: go.mod
src/tle-propagator-service/: Cargo.toml
src/tle-propagator-service/src/: main.rs  propagation.rs  redis_utils.rs  tle.rs
templates/: Makefile
test/: Makefile  README
web/: CHANGELOG.md  LICENSE  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  webpack.config.js
(+1024 files in other folders)
