[package]
name = "tle-propagator-service"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.5", features = ["full"] }
sgp4 = "2.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.39"

[[bin]]
name = "tle-propagator-service"
path = "src/main.rs"